# Formidable2026

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  DEVELOPMENT.md  Formidable2026.sln  Formidable2026Modules.h  README.md  README_BackgroundScreen_Optimized.md  build_hpsocket.bat  clean_all.bat  convert_to_utf8_bom.py  deploy_dlls.bat  setup_env.bat  setup_nim.ps1  test_size.c
Client/: Client.vcxproj  main.cpp
ClientDLL/: ClientDLL.vcxproj  main.cpp
ClientSide/Client/: Client.vcxproj  main.cpp
ClientSide/Client/Core/: AutomationManager.cpp  AutomationManager.h
ClientSide/Client/Security/: AntiDetectionTechniques.cpp  AntiDetectionTechniques.h  BehaviorAnalysisProtection.cpp  BehaviorAnalysisProtection.h  PersistenceOptimizer.cpp  PersistenceOptimizer.h
ClientSide/Client/Utils/: Logger.cpp  Logger.h
ClientSide/ClientDLL/: ClientDLL.vcxproj  main.cpp
ClientSide/FormidableNim/: FormidableNim.vcxproj  README.md  build_loader.py  extract_stub.py
ClientSide/FormidableNim/src/: amsi_patch.nim  etw_patch.nim  loader.nim  nim_client.nim  nim_dll.nim  payload.nim  payload.rc  payload.res  runner.nim  shellcode_loader.nim  syscalls.nim
ClientSide/FormidableNim/tools/: Pe2Bin.cpp  ShellcodeRDI.h
ClientSide/Loaders/Dropper/: Dropper.vcxproj  main.cpp
ClientSide/Loaders/PowerShell/: Loader.ps1
ClientSide/Loaders/ShellCode/: Loader.cpp  ShellCodeLoader.vcxproj
Common/: ClientCore.cpp  ClientCore.h  ClientTypes.h  Common.vcxproj  Config.h  MemoryModule.c  MemoryModule.cpp  Module.h  NetworkClient.cpp  NetworkClient.h  NetworkHelper.h  NetworkServer.cpp  NetworkServer.h  ProtocolEncoder.h  Utils.cpp  Utils.h  aes.c  aes.h
Core/: CommandHandler.h
Loader/: FormidableLoader.cpp  FormidableLoader.vcxproj  aes_mini.c  aes_mini.h
Loaders/PowerShell/: Loader.ps1
Loaders/ShellCode/: Loader.cpp  ShellCodeLoader.vcxproj
Master/: Config.cpp  Config.h  Formidable2026.vcxproj  GlobalState.cpp  GlobalState.h  MainWindow.cpp  MainWindow.h  MasterGUI.rc  NetworkHelper.cpp  NetworkHelper.h  REFACTORING.md  StringUtils.cpp  StringUtils.h  main_gui.cpp  resource.h
Master/Core/: ClientManager.cpp  ClientManager.h  CommandHandler.cpp  CommandHandler.h
Master/Network/: NetworkManager.cpp  NetworkManager.h
Master/Server/Network/: AsyncNetworkManager.cpp  AsyncNetworkManager.h  ConnectionPool.cpp  ConnectionPool.h
Master/Server/Performance/: CacheManager.h  ConcurrentProcessor.cpp  ConcurrentProcessor.h  MemoryManager.cpp  MemoryManager.h
Master/Server/Security/: AntiDetection.cpp  AntiDetection.h  CommandValidator.cpp  CommandValidator.h  SecureTransmission.cpp  SecureTransmission.h
Master/Server/Utils/: Logger.cpp  Logger.h
Master/UI/: AudioDialog.cpp  AudioDialog.h  BackgroundDialog.cpp  BackgroundDialog.h  BuilderDialog.cpp  BuilderDialog.h  DesktopDialog.cpp  DesktopDialog.h  FileDialog.cpp  FileDialog.h  FileManagerUI.cpp  FileManagerUI.h  HistoryDialog.cpp  HistoryDialog.h  InputDialog.cpp  InputDialog.h  KeylogDialog.cpp  KeylogDialog.h  ModuleDialog.cpp  ModuleDialog.h  NetworkDialog.cpp  NetworkDialog.h  ProcessDialog.cpp  ProcessDialog.h  ProcessManagerUI.h  RegistryDialog.cpp  RegistryDialog.h  RegistryManagerUI.h  ServiceDialog.cpp  ServiceDialog.h  SettingsDialog.cpp  SettingsDialog.h  TerminalDialog.cpp  TerminalDialog.h  UIManager.h  VideoDialog.cpp  VideoDialog.h  WindowDialog.cpp  WindowDialog.h
Master/Utils/: CommonHelpers.h  StringHelper.h
Modules/BackgroundScreen/: BackgroundScreen.cpp  ModuleBackgroundScreen.vcxproj
Modules/FileManager/: FileManager.cpp  FileManager.h  ModuleFileManager.vcxproj
Modules/Multimedia/: DXGICapture.h  ModuleMultimedia.vcxproj  Multimedia.cpp
Modules/NetworkManager/: ModuleNetworkManager.vcxproj  NetworkManager.cpp
Modules/ProcessManager/: ModuleProcessManager.vcxproj  ProcessManager.cpp
Modules/RegistryManager/: ModuleRegistryManager.vcxproj  RegistryManager.cpp
Modules/ServiceManager/: ModuleServiceManager.vcxproj  ServiceManager.cpp
Modules/SystemInfo/: ModuleSystemInfo.vcxproj  SystemInfo.cpp  SystemInfo.h
Modules/Terminal/: ModuleTerminal.vcxproj  Terminal.cpp
Modules/WindowManager/: ModuleWindowManager.vcxproj  WindowManager.cpp
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
docs/: RemoteDesktop_Fix_Plan.md
tools/: Pe2Bin.cpp
tools/nim-2.2.0/compiler/: mapping.txt  semstrictfuncs.nim
tools/nim-2.2.0/doc/html/: algorithm.html  apis.html  appdirs.html  asciitables.html  assertions.html  async.html  asyncdispatch.html  asyncfile.html  asyncftpclient.html  asyncfutures.html  asynchttpserver.html  asyncjs.html  asyncmacro.html  asyncnet.html  asyncstreams.html  atlas.html  atomics.html  backends.html  base64.html  bcrypt.html  bitops.html  bitops_utils.html  browsers.html  cgi.html  chains.html  cmdline.html  colors.html  compilesettings.html  complex.html  contributing.html  cookies.html  coro.html  cpuinfo.html  cpuload.html  critbits.html  (+233 more)
(+141 files in other folders)
